# pycqed

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXME_list.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_fixme.sh
.github/workflows/: on_push_ci.yml
GioeleSim/: readme.md
GioeleSim/v1/: FluxQubit.m  QubitsInteract.m  Qubits_Interact_example.m
GioeleSim/v2/: FluxQubit2.m
Notebooks/: averin-coupler.ipynb  csfq-example.ipynb  local-basis-example.ipynb  mutual-inductance-example.ipynb  resonator-example.ipynb  stoquastic.ipynb
data/: LANL_schedule_data.pkl
docs/: My Collection.bib  conf-old.py  conf.py  indexold  refs.bib
examples/: averin-coupler.py  csfq-example.py  fluxonium-atom.py  fluxonium-example.py  jpsq-example.py  local-basis-example.py  resonator-example.py  transmon-example.py
notebooks/: averin-coupler.ipynb  fluxonium-example.ipynb  ising-model-example.ipynb  jpsq-example.ipynb  local-basis-example.ipynb  operators-example.ipynb  phase-slip-example.ipynb  resonator-example.ipynb  subcircuits-example.ipynb  transmon-example.ipynb
pycqed/: __init__.py  _version.py
pyscqed/: __init__.py  circuit_graph.py  dataspec.py  numerical_system.py  parameters.py  symbolic_system.py  text2latex.py  util.py
test/: Untitled.ipynb  basis-transform-test.ipynb  bias-term-test.ipynb  circuit_graph_test.ipynb  full-tests-Copy1.ipynb  full-tests.ipynb  gauge-transform.ipynb  parameters-test.ipynb  symbolic_system_test.ipynb
tests/: test_circuit_graph.py  test_parameters.py
(+37 files in other folders)
