[tool.poetry]
name = "pyscqed"
version = "0.12.0-dev"
description = "Python Superconducting Circuit Quantum Electrodynamics Simulation Package"
authors = ["Louis Fry-Bouriaux"]

[tool.poetry.dependencies]
python = "~3.8.15 || ~3.9.15 || ~3.10.8 || ~3.11.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
sympy = "^1.11.1"
networkx = "^3.0"
qutip = "4.7.1"
graphviz = "^0.20.1"
pydot = "^1.4.2"
matplotlib = "^3.7.1"
progress = "^1.6"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pylint = "^2.17.0"
pycodestyle = "^2.10.0"
mypy = "^1.1.1"
jupyter = "^1.0.0"
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
