[tool.poetry]
name = "pyscqed"
version = "0.13.0"
description = "Python Superconducting Circuit Quantum Electrodynamics Simulation Package"
authors = ["Louis Fry-Bouriaux"]

[tool.poetry.dependencies]
python = "~3.10.8 || ~3.11.0 || ~3.12.0"
numpy = "^2.0.0"
scipy = "^1.14.0"
sympy = "^1.13.1"
networkx = "^3.3"
graphviz = "^0.20.3"
pydot = "^3.0.1"
matplotlib = "^3.9.1"
progress = "^1.6"
qutip = "^5.0.3.post1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.2"
pylint = "^2.17.0"
pycodestyle = "^2.10.0"
mypy = "^1.1.1"
jupyter = "^1.0.0"
jupytext = "^1.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
